[Fix] Update Swagger API to remove tsc errors
